--- a/ovtlyr/blog-detail.html
+++ b/ovtlyr/blog-detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Community</title>
+<title>OVTLYR | Blog Detail</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -71,118 +71,64 @@
     </div>
   </header>
   <div class="outer_main">
-    <section class="new_features new_resources">
+    <section class="new_blog"></section>
+    <section class="blog_header">
       <div class="container">
-        <div class="new_resors01 reveal2">
-          <h1>The OVTLYR Community</h1>
-          <p>We Are Here For You Every Step Of The Way!</p>
-          <p>Support At Every Stage So You Can Succeed!</p>
-          <div class="borderDiv"></div>
+        <div class="header_1">
+          <a href="https://ovtlyr.com/"><img src="images/black-logo.svg" alt="OVTLYR Logo"></a>
+          |
+          <h1>Blog</h1>
+        </div>
+        <div class="header_1 header_2">
+          <ul>
+            <li><a href="#">Browse All Blog</a></li>
+            <li><a href="#">Behavioral Finance</a></li>
+            <li><a href="#">Market & Economy</a></li>
+          </ul>
         </div>
       </div>
-      <div class="resou_list">
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist new_resors1 reveal2">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Free Training Webinars</h2>
-                <p>Dive deep into the market's latest trends with our bi-weekly webinars where industry experts dissect market dynamics and share valuable insights about what's 
-                  working in today's ever changing markets. Sign up for our Webinar <a href="https://www.ovtlyrtraining.com/webinar" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/training-webinar.png" alt="Webinars" />
-              </div>
-            </div>
+    </section>
+    <section class="blog_detail">
+      <div class="container">
+        <div class="blogDtl_sec">
+          <div class="head_img">
+            <img src="images/blog-img3.jpg" alt="Blog Image" />
           </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-              <div class="resoulist2">
-                <img src="images/Trade-room.png" alt="Trading Room" />
-              </div>
-              <div class="resoulist1">
-                <h2>Discord Trading Room</h2>
-                <p>Get exclusive visibility to trades from the Industry’s top stock & option traders. Follow along as a member with complete access to our trading room inside 
-                  our exclusive Discord server. <a href="join-discord.html" target="_blank">See How to Join Our Discord Community</a>.</p>
-              </div>
+          <div class="blog_content0">
+            <div class="blog_content">
+              <p class="blogCate">Behavioral Finance</p>
+              <h1>Supply Chain Woes and a Stalled Recovery: How to Ride Out the Perfect Storm for Stagflation</h1>
+              <div class="head_border"></div>
+              <p class="blogAuthor">By Stefanos Bournias</p>
+              <p>The past weeks of financial news have focused some attention on the term stagflation, raising the question of whether the US and other world economies might be 
+                heading in that direction. But that begs the question. What exactly is stagflation? What are the factors that create it? And what should we be doing if it actually 
+                happens?</p>
+              <h2>What is Stagflation?</h2>
+              <p>Stagflation is a unique combination of inflation, or a general rise in prices making the value of money less, and stalling economic growth. Normally when we think of 
+                inflation, it is accompanied by a growing economy. As more people get jobs and salaries rise the prices of goods and services rise to meet growing demand. As people 
+                have more money to spend, the value of that money decreases as everything becomes more expensive.</p>
+              <h2>What Causes Stagflation?</h2>
+              <p>In order for stagflation to occur, there has to be some reason for prices to go up without the economy also growing. In the 1970's the US experienced stagflation 
+                after OPEC started an oil embargo against the US and some European allies creating an oil shortage in the US. Without the oil necessary for both transportation and 
+                energy, the price of many goods and services drastically increased. At the same time American manufacturing jobs slumped as competitors abroad, especially in Germany 
+                and Japan, began to outcompete their US counterparts.</p>
+              <p>We are currently in a time when a once in a century pandemic has led to unprecedented supply chain issues. Factories around the world are backed up due to worker 
+                shortages and pandemic related health measures. The world's transportation services that ship those goods and resources around the world are also facing similar 
+                backlogs. This has helped to further propel the price increases that started as a response to the economic recovery after the first pandemic related economic 
+                shutdown.</p>
+              <img src="images/blog-img2.jpg" alt="Blog Image" />
+              <p>The booming recovery we were experiencing earlier in the year has since slowed. As pandemic relief funds are no longer being dispersed to the public and Delta and 
+                Omicron variant-caused spikes have resulted in a slowing down of the return to business as usual, economic growth is starting to lag behind the rate of increasing 
+                prices. But so far, prices have stayed high.</p>
+              <h2>What to do in the Event of Stagflation?</h2>
+              <p>It's too early to make a prediction of which way the economy will turn. Economic policy could help to spur more economic growth, supply chain issues may be resolved 
+                and help to lower the prices of some goods. But if inflation continues to run away while employment and the greater economy stagnate, it could be worth understanding 
+                some moves one can make during stagflation that can help protect one's own personal economic well being.</p>
             </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>OVTLYR Community</h2>
-                <p>Our community benefits extend to exclusive content, hot-stock analysis videos, tools designed to empower your trading & private backdoor pass to a room full 
-                  of professional traders. <a href="https://ovtlyr.com/Signup" target="_blank">Start Your Free Trial Today</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/OVTLYR-Community.png" alt="Community" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                <div class="resoulist2">
-                <img src="images/youtube-live.png" alt="youtube" />
-              </div>
-              <div class="resoulist1">
-                <h2>YouTube Live!</h2>
-                <p><a href="https://www.youtube.com/@ovtlyrdotcom" target="_blank">Subscribe to our YouTube channel</a> to watch our take on some of the hot trending topics every week. We cover the biggest headlines of the week and what the AI 
-                  trading data has to say about it.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Daily Stock Analysis Newsletter</h2>
-                <p>Check out our daily newsletter where we share our analysis on one hot opportunity every weekday. Subscribe to our newsletter <a href="https://www.ovtlyrtraining.com/newsletter" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/stock-analysis.png" alt="Daily Stock Analysis" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                 <div class="resoulist2">
-                <img src="images/email-support1.png" alt="Email Support" />
-              </div>
-              <div class="resoulist1">
-                <h2>Email Support</h2>
-                <p>Got a question? Need some help? Our world-class email support team is at your service. All of our members have priority access to our support staff. 
-                  <a href="https://ovtlyr.com/Contact" target="_blank">Contact Us</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Highly Liquid U.S. listed Companies</h2>
-                <p>We only support the biggest names and most liquid U.S. listed stocks & ETFs. We aren’t messing around. No OTC stocks, No Crypto token, No Meme Coins. 
-                  Check our full coverage list <a href="https://ovtlyr.com/CoverageList">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/listed-companies.png" alt="Highly Liquid U.S." />
-              </div>
-            </div>
+            <ul class="next_previousBlog">
+              <li><span><i class="material-symbols-outlined me-1">west</i>Previous</span><a href="blog-detail.html">Inflation, Deflation, and Separating the Signal from the Noise</a></li>
+              <li><span>Next<i class="material-symbols-outlined ms-1">east</i></span><a href="blog-detail.html">A Biased Understanding of Biases - BeFi Barometer Report</a></li>
+            </ul> 
           </div>
         </div>
       </div>
@@ -234,32 +180,6 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
-<script>
-function reveal() {
-  var reveals = document.querySelectorAll(".reveal");
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 50;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } 
-    /* else {
-      reveals[i].classList.remove("active");
-    } */
-  }
-}
-window.addEventListener("scroll", reveal);
-</script>
-<script>
-  $(document).ready(function () {
-    $('.new_resors01').addClass('active');
-    setTimeout(function(){
-      $('.new_resors1').addClass('active');
-    },500); 
-  });
-</script>
   <!--======= MOBILE MENU START =======-->
   <script>
     (function() {
