--- a/ovtlyr/contact.html
+++ b/ovtlyr/contact.html
@@ -214,68 +214,73 @@ if (localStorage.getItem('darkMode') === "on") {
       </div>
       <div class="dashboard_cont">
         <div class="contactUs_sec1">
-          <h3>Have a Question?</h3>
-          <div class="contact_sec11">
-            <div class="contact_sec111">
-              <!-- <div class="form_head">
-                <h4>Have a question?</h4>
-              </div> -->
-              <div class="account_fields">
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="form_field">
-                      <label>Name</label>
-                      <input type="text" name="name" />
+          <div class="top_box mb-3 mb-md-4">
+            <p>Need technical support or any other help with OVTLYR platform? Create a Helpdesk Ticket <a href="mailto:support@ovtlyr.zendesk.com">Here</a>, or Send an email to <span>support@ovtlyr.zendesk.com</span> to create ticket.</p>
+          </div>
+          <div class="top_box">
+            <h3>For any other questions write us here...</h3>
+            <div class="contact_sec11">
+              <div class="contact_sec111">
+                <!-- <div class="form_head">
+                  <h4>or any other questions write us here...</h4>
+                </div> -->
+                <div class="account_fields">
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                      <div class="form_field">
+                        <label>Name</label>
+                        <input type="text" name="name" />
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="form_field">
-                      <label>Email</label>
-                      <input type="text" name="email" value="example@gamil.com" disabled />
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                      <div class="form_field">
+                        <label>Email</label>
+                        <input type="text" name="email" value="example@gamil.com" disabled />
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="form_field">
-                      <label>Phone Number</label>
-                      <input type="text" name="phoneno" />
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                      <div class="form_field">
+                        <label>Phone Number</label>
+                        <input type="text" name="phoneno" />
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="form_field">
-                      <label>Subject</label>
-                      <select>
-                        <option selected="" disabled="">Subject</option>
-                        <option>Interested in OVTLYR Automated Strategies</option>
-                        <option>General Question about the Platform</option>
-                        <option>Other Question</option>
-                      </select>
-                      <span class="error">Please select one option</span>
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                      <div class="form_field">
+                        <label>Subject</label>
+                        <select>
+                          <option selected disabled>Subject</option>
+                          <option>Interested in OVTLYR Automated Strategies</option>
+                          <option>General Question about the Platform</option>
+                          <option>Other Question</option>
+                        </select>
+                        <span class="error">Please select one option</span>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="form_field">
-                      <label>Message</label>
-                      <textarea rows="4" type="text" name="message" placeholder=""></textarea>
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                      <div class="form_field">
+                        <label>Message</label>
+                        <textarea rows="4" type="text" name="message" placeholder=""></textarea>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="captcha_contact"></div>
-                <div class="login_buttons">
-                  <button type="button">Submit</button>
+                  <div class="captcha_contact"></div>
+                  <div class="login_buttons">
+                    <button type="button">Submit</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="contact_sec112">
-              <img src="images/contact-us-light.svg" class="white_img" alt="Contact Us" />
-              <img src="images/contact-us-dark.svg" class="black_img" alt="Contact Us" />
+              <div class="contact_sec112">
+                <img src="images/contact-us-light.svg" class="white_img" alt="Contact Us" />
+                <img src="images/contact-us-dark.svg" class="black_img" alt="Contact Us" />
+              </div>
             </div>
           </div>
         </div>
