--- a/ovtlyr/join-discord.html
+++ b/ovtlyr/join-discord.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Community</title>
+<title>OVTLYR | Join Discord</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -71,119 +71,63 @@
     </div>
   </header>
   <div class="outer_main">
-    <section class="new_features new_resources">
+    <section class="new_blog"></section>
+    <section class="discord_sec">
       <div class="container">
-        <div class="new_resors01 reveal2">
-          <h1>The OVTLYR Community</h1>
-          <p>We Are Here For You Every Step Of The Way!</p>
-          <p>Support At Every Stage So You Can Succeed!</p>
-          <div class="borderDiv"></div>
-        </div>
-      </div>
-      <div class="resou_list">
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist new_resors1 reveal2">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Free Training Webinars</h2>
-                <p>Dive deep into the market's latest trends with our bi-weekly webinars where industry experts dissect market dynamics and share valuable insights about what's 
-                  working in today's ever changing markets. Sign up for our Webinar <a href="https://www.ovtlyrtraining.com/webinar" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/training-webinar.png" alt="Webinars" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-              <div class="resoulist2">
-                <img src="images/Trade-room.png" alt="Trading Room" />
-              </div>
-              <div class="resoulist1">
-                <h2>Discord Trading Room</h2>
-                <p>Get exclusive visibility to trades from the Industry’s top stock & option traders. Follow along as a member with complete access to our trading room inside 
-                  our exclusive Discord server. <a href="join-discord.html" target="_blank">See How to Join Our Discord Community</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>OVTLYR Community</h2>
-                <p>Our community benefits extend to exclusive content, hot-stock analysis videos, tools designed to empower your trading & private backdoor pass to a room full 
-                  of professional traders. <a href="https://ovtlyr.com/Signup" target="_blank">Start Your Free Trial Today</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/OVTLYR-Community.png" alt="Community" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                <div class="resoulist2">
-                <img src="images/youtube-live.png" alt="youtube" />
-              </div>
-              <div class="resoulist1">
-                <h2>YouTube Live!</h2>
-                <p><a href="https://www.youtube.com/@ovtlyrdotcom" target="_blank">Subscribe to our YouTube channel</a> to watch our take on some of the hot trending topics every week. We cover the biggest headlines of the week and what the AI 
-                  trading data has to say about it.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Daily Stock Analysis Newsletter</h2>
-                <p>Check out our daily newsletter where we share our analysis on one hot opportunity every weekday. Subscribe to our newsletter <a href="https://www.ovtlyrtraining.com/newsletter" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/stock-analysis.png" alt="Daily Stock Analysis" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                 <div class="resoulist2">
-                <img src="images/email-support1.png" alt="Email Support" />
-              </div>
-              <div class="resoulist1">
-                <h2>Email Support</h2>
-                <p>Got a question? Need some help? Our world-class email support team is at your service. All of our members have priority access to our support staff. 
-                  <a href="https://ovtlyr.com/Contact" target="_blank">Contact Us</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Highly Liquid U.S. listed Companies</h2>
-                <p>We only support the biggest names and most liquid U.S. listed stocks & ETFs. We aren’t messing around. No OTC stocks, No Crypto token, No Meme Coins. 
-                  Check our full coverage list <a href="https://ovtlyr.com/CoverageList">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/listed-companies.png" alt="Highly Liquid U.S." />
-              </div>
-            </div>
-          </div>
+        <div class="discord_cont">
+          <h1>Joining The OVTLYR Discord Server</h1>
+          <ul class="first_list">
+            <li><p><span>1. Click the Invite Link:</span> Open your web browser and click on the link provided: <a href="https://discord.gg/DjgmSrdxUY">https://discord.gg/DjgmSrdxUY</a>.</p></li>
+            <li><p><span>2. Discord Account:</span> If you don't have a Discord account, you'll be prompted to sign up. Fill in the required information to create your account. Be sure to 
+              verify your account. If you already have an account, proceed to step 3.</p></li>
+            <li><p><span>3. Join the Server:</span> After signing in or if you were already logged in, the link will redirect you to the Discord app. You'll see a window showing the server 
+              name, Ovtlyr, and a prompt to join the server. Click Join Ovtlyr.</p>
+              <ul class="sec_list">
+                <li><p>- Another way of joining the server is by clicking the “+” sign at the left side bar of your discord app which says, “Add A Server”, then a window will open 
+                  prompting you to Create a server or Join a server. Click Join a Server then paste the discord invite link provided: <a href="https://discord.gg/DjgmSrdxUY">
+                    https://discord.gg/DjgmSrdxUY</a>.</p></li>
+              </ul>
+            </li>
+            <li><p><span>4. Onboarding:</span> Once you’re in, you will now be redirected to the Discord Server’s onboarding process where you will find a welcome message and things to do on the 
+              server.</p></li>
+            <li><p><span>5. Getting Started:</span> Start by clicking on “Discover OVTLYR” directly below the “Get Started” text, which will redirect you to the welcome channel of OVTLYR. 
+              You will notice at the bottom of the channel is a prompt to complete a few more steps before you can talk. Click “Complete” and a window will open prompting you to 
+              read and agree to the rules of the server.</p></li>
+            <li><p><span>6. Read and Accept Rules:</span> Take a moment to read and agree to them by scrolling down and clicking the appropriate button. Once you’re done, you can now freely 
+              view and message in the appropriate channels in the server.</p></li>
+            <li><p><span>7. Verification:</span> If your account is still not verified, there might be a verification process to prevent spam or ensure members are genuine. Follow the 
+              instructions provided by the server administrators to complete this step. It could involve solving a CAPTCHA or answering a question.</p></li>
+            <li><p><span>8. Complete the Onboarding Process:</span> Once done, you will be back at the Welcome Channel. You will now see another text prompt at the bottom that says “Next: 
+              Introduce yourself to the community….” Continue following the prompts at the bottom until you finish the onboarding. Congratulations! You’ve finished the onboarding 
+              process!</p></li>
+            <li><p><span>9. Explore Channels:</span> Once done, take a moment to explore the various categories and channels available on the server.</p>
+              <ul class="sec_list">
+                <li><p><span>a. OVTLYR -</span> here you will find the welcome page, become-an-affiliate, and rules channel. These channels are for viewing and reading only.</p></li>
+                <li><p><span>b. Public Chat -</span> this is where most of the discussion happens. Feel free to hangout, say hello to everyone at the general channel. Tell us stories of your 
+                  trading success at the share-your-big-wins channel. And if you have any inquiry regarding ovtlyr, feel free to send a message at the support channel.</p></li>
+                <li><p><span>c. Trading -</span> here you will find real-time trade alerts. Click this link for easy access to the trading room: <a href="https://discord.gg/jKFmqBjFfw">
+                  https://discord.gg/jKFmqBjFfw</a>.</p>
+                  <ul class="third_list">
+                    <li><p><span>i. Stock Trade Setup Ideas:</span> Discover and share your latest stock trade setup ideas in this dynamic space. Whether you're analyzing charts, identifying 
+                      potential breakout stocks, or fine-tuning your strategies, this channel is the ideal hub for stock traders. Connect with fellow enthusiasts, discuss market 
+                      trends, and stay ahead of the curve in the world of stock trading.</p></li>
+                    <li><p><span>ii. Day Trading:</span> Dive into the fast-paced world of day trading. Discuss real-time market movements, share quick trade analyses, and exchange tips 
+                      for making the most of intraday opportunities. Whether you're a seasoned day trader or just starting out, join the conversation and stay informed on 
+                      potential profit-generating moves.</p></li>
+                    <li><p><span>iii. Swing Trading:</span> Unleash the power of swing trading in this collaborative space. Discuss and dissect swing trading strategies across various 
+                      markets, analyze charts, and share valuable insights with a community of like-minded traders. Whether you're holding positions for a few days or several 
+                      weeks, this is your go-to for refining your swing trading skills.</p></li>
+                    <li><p><span>iv. 10-Minute Trading:</span> Swing Trading Options: Get real-time trade alerts, follow open positions, and discuss the closure of trades in this dynamic 
+                      space focused on 10-minute trading, swing trading options. Stay on top of the market with timely updates and engage in discussions about effective options 
+                      strategies. Whether you're a seasoned options trader or just getting started, this provides valuable insights for navigating the fast-paced world of short-term 
+                      options trading.</p></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><p class="mb-0"><span>10. Engage and Participate:</span> Feel free to start conversations, ask questions, or join ongoing discussions in the channels that interest you. Remember to respect 
+              the server's rules and other members.</p></li>
+          </ul>
         </div>
       </div>
     </section>
@@ -234,32 +178,6 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
-<script>
-function reveal() {
-  var reveals = document.querySelectorAll(".reveal");
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 50;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } 
-    /* else {
-      reveals[i].classList.remove("active");
-    } */
-  }
-}
-window.addEventListener("scroll", reveal);
-</script>
-<script>
-  $(document).ready(function () {
-    $('.new_resors01').addClass('active');
-    setTimeout(function(){
-      $('.new_resors1').addClass('active');
-    },500); 
-  });
-</script>
   <!--======= MOBILE MENU START =======-->
   <script>
     (function() {
