--- a/ovtlyr/pricing.html
+++ b/ovtlyr/pricing.html
@@ -37,7 +37,7 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Live</a></li>
+              <li><a href="community.html">Community</a></li>
               <li><a href="log-in.html">Log In</a></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -51,7 +51,7 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="#">Live</a></li>
+                  <li><a href="community.html">Community</a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -611,7 +611,6 @@
           <div class="footer_outer11">
             <a href="home.html"><img src="images/home-footer-logo.svg" alt="OVTLYR Logo" /></a>
             <p>Outliers Win</p>
-            <!-- <p>Our vision is to provide convenience <span class="block_box">and help increase your sales business.</span></p> -->
             <ul>
               <li><a href="https://www.facebook.com/Ovtlyr/" target="_blank"><img src="images/facebook.svg" alt="Facebook" /></a></li>
               <li><a href="https://twitter.com/ovtlyr" target="_blank"><img src="images/twitter.svg" alt="Twitter" /></a></li>
@@ -622,18 +621,18 @@
           </div>
           <div class="footer_outer12">
             <div>
-              <h5>About</h5>
               <ul>
                 <li><a href="features.html">Features</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="coverage-list.html">Coverage List</a></li>
+                <li><a href="community.html">Community</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="#">Live</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="blogs.html">Blog</a></li>
               </ul>
             </div>
             <div>
               <h5>Socials</h5>
               <ul>
-                <li><a href="#" target="_blank">Discord</a></li>
                 <li><a href="https://www.instagram.com/ovtlyrinc/" target="_blank">Instagram</a></li>
                 <li><a href="https://twitter.com/ovtlyr" target="_blank">Twitter</a></li>
                 <li><a href="https://www.facebook.com/Ovtlyr/" target="_blank">Facebook</a></li>
