--- a/ovtlyr/roadmap.html
+++ b/ovtlyr/roadmap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Community</title>
+<title>OVTLYR | Roadmap</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -71,120 +71,18 @@
     </div>
   </header>
   <div class="outer_main">
-    <section class="new_features new_resources">
+    <section class="new_blog"></section>
+    <section class="roardmap_sec">
       <div class="container">
-        <div class="new_resors01 reveal2">
-          <h1>The OVTLYR Community</h1>
-          <p>We Are Here For You Every Step Of The Way!</p>
-          <p>Support At Every Stage So You Can Succeed!</p>
-          <div class="borderDiv"></div>
-        </div>
-      </div>
-      <div class="resou_list">
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist new_resors1 reveal2">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Free Training Webinars</h2>
-                <p>Dive deep into the market's latest trends with our bi-weekly webinars where industry experts dissect market dynamics and share valuable insights about what's 
-                  working in today's ever changing markets. Sign up for our Webinar <a href="https://www.ovtlyrtraining.com/webinar" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/training-webinar.png" alt="Webinars" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-              <div class="resoulist2">
-                <img src="images/Trade-room.png" alt="Trading Room" />
-              </div>
-              <div class="resoulist1">
-                <h2>Discord Trading Room</h2>
-                <p>Get exclusive visibility to trades from the Industry’s top stock & option traders. Follow along as a member with complete access to our trading room inside 
-                  our exclusive Discord server. <a href="join-discord.html" target="_blank">See How to Join Our Discord Community</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>OVTLYR Community</h2>
-                <p>Our community benefits extend to exclusive content, hot-stock analysis videos, tools designed to empower your trading & private backdoor pass to a room full 
-                  of professional traders. <a href="https://ovtlyr.com/Signup" target="_blank">Start Your Free Trial Today</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/OVTLYR-Community.png" alt="Community" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                <div class="resoulist2">
-                <img src="images/youtube-live.png" alt="youtube" />
-              </div>
-              <div class="resoulist1">
-                <h2>YouTube Live!</h2>
-                <p><a href="https://www.youtube.com/@ovtlyrdotcom" target="_blank">Subscribe to our YouTube channel</a> to watch our take on some of the hot trending topics every week. We cover the biggest headlines of the week and what the AI 
-                  trading data has to say about it.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Daily Stock Analysis Newsletter</h2>
-                <p>Check out our daily newsletter where we share our analysis on one hot opportunity every weekday. Subscribe to our newsletter <a href="https://www.ovtlyrtraining.com/newsletter" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/stock-analysis.png" alt="Daily Stock Analysis" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                 <div class="resoulist2">
-                <img src="images/email-support1.png" alt="Email Support" />
-              </div>
-              <div class="resoulist1">
-                <h2>Email Support</h2>
-                <p>Got a question? Need some help? Our world-class email support team is at your service. All of our members have priority access to our support staff. 
-                  <a href="https://ovtlyr.com/Contact" target="_blank">Contact Us</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Highly Liquid U.S. listed Companies</h2>
-                <p>We only support the biggest names and most liquid U.S. listed stocks & ETFs. We aren’t messing around. No OTC stocks, No Crypto token, No Meme Coins. 
-                  Check our full coverage list <a href="https://ovtlyr.com/CoverageList">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/listed-companies.png" alt="Highly Liquid U.S." />
-              </div>
-            </div>
-          </div>
-        </div>
+        <h1>Roadmap</h1>
+        <ul>
+          <li><p>Updates on Buy/Sell Signals as per our upcoming AI Model Update - Soon</p></li>
+          <li><p>Various UI/UX Improvements - Ongoing</p></li>
+          <li><p>Chatbot - End of Q1 2024</p></li>
+          <li><p>Portfolio Back-Testing Tool - End of Q1 2024</p></li>
+          <li><p>Mobile App - TBD</p></li>
+          <li><p>Voice Enabled AI Assistant - TBD</p></li>
+        </ul>
       </div>
     </section>
     <footer class="footer_outer">
@@ -234,32 +132,6 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
-<script>
-function reveal() {
-  var reveals = document.querySelectorAll(".reveal");
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 50;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } 
-    /* else {
-      reveals[i].classList.remove("active");
-    } */
-  }
-}
-window.addEventListener("scroll", reveal);
-</script>
-<script>
-  $(document).ready(function () {
-    $('.new_resors01').addClass('active');
-    setTimeout(function(){
-      $('.new_resors1').addClass('active');
-    },500); 
-  });
-</script>
   <!--======= MOBILE MENU START =======-->
   <script>
     (function() {
