--- a/ovtlyr/set-password.html
+++ b/ovtlyr/set-password.html
@@ -28,19 +28,23 @@
                 <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="form_field">
-                      <label>Set Password</label>
-                      <input type="password" name="password" placeholder="•••••" />
-                      <button type="button">
-                        <i class="fa-regular fa-eye-slash" style="display: none;"></i>
-                        <i class="fa-regular fa-eye"></i>
-                      </button>
+                      <label>Email</label>
+                      <input type="text" name="email" />
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="form_field">
-                      <label>Confirm Password</label>
+                      <label>Verification Code</label>
+                      <input type="text" name="verificationcode" />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="form_field">
+                      <label>Set Password</label>
                       <input type="password" name="password" placeholder="•••••" />
                       <button type="button">
                         <i class="fa-regular fa-eye-slash" style="display: none;"></i>
