--- a/ovtlyr/about-us.html
+++ b/ovtlyr/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Community</title>
+<title>OVTLYR | About Us</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -71,117 +71,92 @@
     </div>
   </header>
   <div class="outer_main">
-    <section class="new_features new_resources">
+    <section class="new_features new_about">
       <div class="container">
-        <div class="new_resors01 reveal2">
-          <h1>The OVTLYR Community</h1>
-          <p>We Are Here For You Every Step Of The Way!</p>
-          <p>Support At Every Stage So You Can Succeed!</p>
-          <div class="borderDiv"></div>
+        <div class="new_aboutSec new_resors01 reveal2">
+          <h1>About Us</h1>
+          <h2>OVTLYR is a demonstration that markets are people, and <span>people are predictable</span>.</h2>
+          <div class="borderDiv2"></div>
+        </div>
+        <div class="new_aboutSec new_resors1 reveal2">
+          <p>By providing the most timely and accurate market behavioral data available, OVTLYR seeks to display the importance of the “human variable” on market movements while 
+            simultaneously helping each client mitigate risk and realize greater potential from their stock portfolios.</p>
+          <p>Initially a research project on volatility, OVTLYR’s early work focused on leveraging derived investor behavioral data alongside stock market & macroeconomic 
+            historical data to build an AI model capable of predicting drawdowns across sectors & indexes. This successful experiment eventually led to on-boarding the vast 
+            majority of the largest, most liquid US listed stocks with a total market cap visibility well above $40T.</p>
+          <p>In early 2021, OVTLYR was offered via pilot access to a community of several thousand investors. Pilot launch feedback and ongoing R&D helped to structure a 
+            full-fledged platform solution.</p>
+          <p class="mb-0">Today, OVTLYR is used by both active and passive investors to gain an edge in the stock market. The platform is built to provide institutional grade data & 
+            actionable insights affordably to everyday investors.</p>
         </div>
       </div>
-      <div class="resou_list">
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist new_resors1 reveal2">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Free Training Webinars</h2>
-                <p>Dive deep into the market's latest trends with our bi-weekly webinars where industry experts dissect market dynamics and share valuable insights about what's 
-                  working in today's ever changing markets. Sign up for our Webinar <a href="https://www.ovtlyrtraining.com/webinar" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/training-webinar.png" alt="Webinars" />
-              </div>
+    </section>
+    <section class="new_about1">
+      <div class="container">
+        <div class="new_about11 reveal">
+          <h2>Our Team</h2>
+        </div>
+        <div class="new_about2">
+          <div class="about_1 reveal">
+            <div class="about_12">
+              <img src="images/mark-team.png" alt="Mark Gorzycki" />
+            </div>
+            <div class="about_11">
+              <h4>Mark Gorzycki</h4>
+              <h5>(Co-Founder, Chief Strategist)</h5>
+              <p>Mark has a strong background in mathematics and previously built cutting edge quantitative & qualitative algorithms within the Defense sector. He has a proven track 
+                record of building complex architectures that measure human behavior with disparate, convoluted datasets to solve real world problems.</p>
+              <p>Mark is responsible for building the core algorithm at OVTLYR that is able to identify times of excessive Investor fear & greed for stocks & ETFs while accurately 
+                predicting price trajectory.</p>
             </div>
           </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-              <div class="resoulist2">
-                <img src="images/Trade-room.png" alt="Trading Room" />
-              </div>
-              <div class="resoulist1">
-                <h2>Discord Trading Room</h2>
-                <p>Get exclusive visibility to trades from the Industry’s top stock & option traders. Follow along as a member with complete access to our trading room inside 
-                  our exclusive Discord server. <a href="join-discord.html" target="_blank">See How to Join Our Discord Community</a>.</p>
-              </div>
+          <div class="about_1 reveal">
+            <div class="about_12">
+              <img src="images/mahesh-team.png" alt="Mahesh Kashyap" />
+            </div>
+            <div class="about_11">
+              <h4>Mahesh Kashyap</h4>
+              <h5>(Co-Founder, CEO)</h5>
+              <p>Mahesh is passionate about creating innovative solutions that leverage data and technology to empower people and organizations. He has a successful track record of 
+                building technology product & service companies prior to founding OVTLYR. As the CEO and Co-Founder of OVTLYR, he leads a team of experts in developing and 
+                delivering a cutting-edge platform that predicts stock market trends using artificial intelligence, investor behavior, and macroeconomic factors.</p>
+              <p><i>*Mark & Mahesh built a successful Fintech Company catering to hedge funds prior to starting OVTLYR</i></p>
             </div>
           </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>OVTLYR Community</h2>
-                <p>Our community benefits extend to exclusive content, hot-stock analysis videos, tools designed to empower your trading & private backdoor pass to a room full 
-                  of professional traders. <a href="https://ovtlyr.com/Signup" target="_blank">Start Your Free Trial Today</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/OVTLYR-Community.png" alt="Community" />
-              </div>
+          <div class="about_1 reveal">
+            <div class="about_12">
+              <img src="images/christopher-team.png" alt="Christopher Uhl" />
+            </div>
+            <div class="about_11">
+              <h4>Christopher Uhl, CMA</h4>
+              <h5>(Director of Marketing & Trader Relations)</h5>
+              <p>Christopher Uhl, a dynamic force in the world of finance, stands as a distinguished personality with a trailblazing career in stock and option trading. Recognized 
+                as a two-time Top 100 Person in Finance and the Host of the Top 10 iTunes Investing Podcast, "The How To Trade Stocks And Options Podcast," Christopher has 
+                cultivated a massive following, reaching over 2 million downloads in more than 150 countries.</p>
+              <p>Christopher's journey to success wasn't without challenges; having faced setbacks, he embarked on a transformative path. Learning directly from World Famous Market 
+                Wizards and Billionaire Portfolio Managers, he distilled their teachings into the groundbreaking "10 Minutes To Freedom Trading Strategy." In its inaugural year, 
+                this strategy yielded an impressive return of 172.41% in 2021, its inaugural year of execution, solidifying Christopher's status as a trailblazer in the realm of 
+                trading.</p>
+              <p>Hailing from humble beginnings in rural Texas, Christopher's pursuit of knowledge led him to earn a BBA and MBA. Despite entering the corporate finance arena 
+                during the tumultuous economic landscape of 2008, he navigated the challenges, becoming a Certified Management Accountant all while honing his trading expertise 
+                over a decade-long career.</p>
+              <p>This visionary and award-winning personality continues to share his wisdom, aiming to make trading knowledge as accessible as entertainment. Christopher Uhl is 
+                not just a trader; he is a mentor, speaker, and innovator, dedicated to empowering traders of all levels with the tools and insights to trade faster</p>
             </div>
           </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                <div class="resoulist2">
-                <img src="images/youtube-live.png" alt="youtube" />
-              </div>
-              <div class="resoulist1">
-                <h2>YouTube Live!</h2>
-                <p><a href="https://www.youtube.com/@ovtlyrdotcom" target="_blank">Subscribe to our YouTube channel</a> to watch our take on some of the hot trending topics every week. We cover the biggest headlines of the week and what the AI 
-                  trading data has to say about it.</p>
-              </div>
+          <div class="about_1 reveal">
+            <div class="about_12">
+              <img src="images/ferdinand-team.png" alt="Ferdinand Mehlinger" />
             </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Daily Stock Analysis Newsletter</h2>
-                <p>Check out our daily newsletter where we share our analysis on one hot opportunity every weekday. Subscribe to our newsletter <a href="https://www.ovtlyrtraining.com/newsletter" target="_blank">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/stock-analysis.png" alt="Daily Stock Analysis" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal reverse_box">
-              <div class="bg_div2"></div>
-                 <div class="resoulist2">
-                <img src="images/email-support1.png" alt="Email Support" />
-              </div>
-              <div class="resoulist1">
-                <h2>Email Support</h2>
-                <p>Got a question? Need some help? Our world-class email support team is at your service. All of our members have priority access to our support staff. 
-                  <a href="https://ovtlyr.com/Contact" target="_blank">Contact Us</a>.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bg_img">
-          <div class="container">
-            <div class="resoulist reveal">
-              <div class="bg_div"></div>
-              <div class="resoulist1">
-                <h2>Highly Liquid U.S. listed Companies</h2>
-                <p>We only support the biggest names and most liquid U.S. listed stocks & ETFs. We aren’t messing around. No OTC stocks, No Crypto token, No Meme Coins. 
-                  Check our full coverage list <a href="https://ovtlyr.com/CoverageList">here</a>.</p>
-              </div>
-              <div class="resoulist2">
-                <img src="images/listed-companies.png" alt="Highly Liquid U.S." />
-              </div>
+            <div class="about_11">
+              <h4>Ferdinand Mehlinger</h4>
+              <h5>(Director of SEO & Public Relations)</h5>
+              <p>Ferdinand Mehlinger, a key figure in digital marketing and public relations, brings a unique blend of technical brilliance and strategic communication skills to 
+                OVTLYR. His early contributions to the Backrub team, crucial in developing Google's search algorithm, showcase his deep understanding of search engine dynamics.</p> 
+              <p>At OVTLYR, Ferdinand expertly applies this knowledge in crafting sophisticated SEO strategies that significantly boost online visibility and engagement. 
+                Simultaneously, he excels in public relations, adeptly managing the company's external communications and media relations. His ability to integrate SEO with a 
+                comprehensive public relations approach not only enhances OVTLYR's digital footprint but also fortifies its reputation in the financial technology arena, 
+                demonstrating his pivotal role in shaping the company's public image and outreach strategies.</p>
             </div>
           </div>
         </div>
@@ -234,9 +209,11 @@
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
+  
 <script>
 function reveal() {
   var reveals = document.querySelectorAll(".reveal");
+
   for (var i = 0; i < reveals.length; i++) {
     var windowHeight = window.innerHeight;
     var elementTop = reveals[i].getBoundingClientRect().top;
@@ -257,7 +234,7 @@ window.addEventListener("scroll", reveal);
     $('.new_resors01').addClass('active');
     setTimeout(function(){
       $('.new_resors1').addClass('active');
-    },500); 
+    },200);
   });
 </script>
   <!--======= MOBILE MENU START =======-->
