--- a/ovtlyr/features.html
+++ b/ovtlyr/features.html
@@ -36,7 +36,7 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Live</a></li>
+              <li><a href="community.html">Community</a></li>
               <li><a href="log-in.html">Log In</a></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -50,7 +50,7 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="#">Live</a></li>
+                  <li><a href="community.html">Community</a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -339,12 +339,13 @@
           </div>
           <div class="footer_outer12">
             <div>
-              <h5>About</h5>
               <ul>
                 <li><a href="features.html">Features</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="coverage-list.html">Coverage List</a></li>
+                <li><a href="community.html">Community</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="https://www.youtube.com/@ovtlyrdotcom/streams" target="_blank">Live</a></li>
-                <li><a href="https://blog.ovtlyr.com/" target="_blank">Blog</a></li>
+                <li><a href="blogs.html">Blog</a></li>
               </ul>
             </div>
             <div>
@@ -395,21 +396,6 @@ window.addEventListener("scroll", reveal);
     $('.inner_banner2').addClass('active');
   });
 </script>
-  <!--====== TESTIMONIALS SLIDER SCRIPT ======--> 
-  <script src="js/owl.carousel.js"></script>
-  <script>
-    jQuery(document).ready(function($) {
-      $('.loop').owlCarousel({
-        center: false, 
-        items: 1,
-        slideBy: 1,
-        loop: true,
-        margin: 0,
-        autoplay:false,
-        nav: false
-      });
-    });
-  </script>
   <!--======= MOBILE MENU START =======-->
   <script>
     (function() {
